# freebsd-launchd-mach

./: .gitignore  NOTICE  README.md  build.sh  buildpkgs-base.txt  buildpkgs.txt  make-mach-kmod.sh  pkglist-base.txt  pkglist.txt
.github/workflows/: build.yml
boot/: loader.conf
kmodloader/: Makefile
kmodloader/src/: KMDaemon.h  KMDaemon.m  RadeonPCIIDs.h  main.m
overlays/etc/: rc.conf  rc.local
overlays/usr/libexec/: launchd-getty-wrapper
overlays/usr/tests/freebsd-launchd-mach/: run.sh
ramdisk/: init.sh
scripts/: import-source.sh
src/Libnotify/: Makefile  VENDORED.md  libnotify.h  notify_client.c  notify_internal.h  table.c
src/Libnotify/Libnotify.xcodeproj/: project.pbxproj
src/Libnotify/freebsd-shims/: notify_probes.h
src/Libnotify/freebsd-shims/os/: activity.h  assumes.h  collections.h  lock_private.h  log.h  log_private.h  log_simple_private.h  reason_private.h  transaction_private.h
src/Libnotify/notifyd/: entitlements.plist  notify_proc.c  notifyd.c  notifyd.h  pathwatch.c
src/Libnotify/notifyd-xctests/: NotifyStateTests.m  notifyd-xctests.xctestplan
src/Libnotify/notifyutil/: notifyutil.c
src/Libnotify/tests/: Makefile  notify_leaks.c  notify_loopback_test_helper.c  notify_many_dups.c  notify_pathwatch.c
src/Libnotify/xcodeconfig/: base.xcconfig  notifyd-testing-lib.xcconfig  notifyd-xctests.xcconfig  notifyd.xcconfig
src/bootstrap/: bootstrap_protocol.h  bootstrap_server.c  libbootstrap.c
src/bootstrap/tests/: test_bootstrap.c  test_bootstrap_remote.c
src/bootstrap_cmds/migcom.tproj/: Makefile  lexxer.l  mig.sh
src/hwregd/: Makefile  hwregd.c
src/launchd/freebsd-shims/: AvailabilityMacros.h  NSSystemDirectories.h  TargetConditionals.h  _simple.h  asl.h  bootfiles.h  dns_sd.h  errno.h  launchctl_freebsd_compat.h  libinfo.h  libproc.h  libproc_internal.h  quarantine.h  spawn_private.h  unistd.h  util.h
src/launchd/freebsd-shims/IOKit/: IOKitLib.h
src/launchd/freebsd-shims/bsm/: audit_session.h  auditd_lib.h
src/launchd/freebsd-shims/libkern/: OSAtomic.h  OSByteOrder.h
src/launchd/freebsd-shims/mach-o/: getsect.h
src/launchd/liblaunch/: Makefile  launchd_helper_server_stub.c  libvproc.c  vproc_internal.h
src/launchd/src/: Makefile  core.c  forward_stubs.c  launchd.c  launchd_plist_scan.c  launchd_plist_scan.h  runtime.c
src/launchd/support/: Makefile
src/libCoreFoundation/: CFRuntime.c  Makefile  VENDOR
src/libCoreFoundation-tests/: test_corefoundation.c
src/libCoreFoundation/include/: CFAvailability.h
src/libCoreFoundation/internalInclude/: CFInternal.h  CoreFoundation_Prefix.h
src/libdispatch-tests/: test_libdispatch.c  test_libdispatch_mach.c
src/libdispatch/private/: source_private.h
src/libdispatch/src/: CMakeLists.txt
src/libmach/: Makefile  libsystem_kernel.pc  mach_traps.c
src/libxpc/: Availability.h  Makefile  launch.h  nv.h  stubs.c  subr_nvlist.c  xpc_internal.h  xpc_misc.c  xpc_type.c
src/libxpc-tests/: test_libxpc.c
src/libxpc/sys/: fileport.h
src/libxpc/uuid/: uuid.h
src/libxpc/xpc/: private.h
src/mach_kmod/: Makefile  PHASE_B_FINDINGS.md  README.md  opt_audit.h  opt_capsicum.h  opt_compat_mach.h  opt_ntp.h  smoke-sysctls.sh
src/mach_kmod/include/: compat_shim.h
src/mach_kmod/src/: compat_stubs.c  mach_module.c  mach_stats.c  mach_syscall_wire.c  mach_test.c  mach_thread.c  mach_traps.c
src/mach_kmod/tests/: test_host_bootstrap.c  test_libmach.c  test_mach_msg.c  test_mach_port.c  test_mach_syscall0.c  test_task_special_port.c
src/swift-foundation-icu/: CMakeLists.txt  PORTING_README.md  Package.swift  README.md
src/swift-foundation-icu/ICUExport/: Package.swift  README.md
src/swift-foundation-icu/icuSources/: CMakeLists.txt
src/swift-foundation-icu/icuSources/common/: CMakeLists.txt  appendable.cpp  bmpset.cpp  bmpset.h  brkeng.cpp  brkiter.cpp  bytesinkutil.cpp  bytesinkutil.h  bytestrie.cpp  bytestriebuilder.cpp  bytestrieiterator.cpp  caniter.cpp  characterproperties.cpp  charstr.h  cmemory.cpp  cstring.cpp  dictbe.cpp  dictionarydata.cpp  edits.cpp  emojiprops.cpp  filteredbrk.cpp  freebsd_decode_icu_chunks.c  freebsd_icu_packaged_data.S.in  freebsd_icu_packaged_data.c.in  hash.h  icuplug.cpp  loadednormalizer2impl.cpp  localebuilder.cpp  localematcher.cpp  localeprioritylist.cpp  localsvc.cpp  locavailable.cpp  locbased.h  locdispnames.cpp  locdistance.cpp  locdistance.h  locdspnm.cpp  locid.cpp  loclikely.cpp  loclikelysubtags.cpp  (+141 more)
src/swift-foundation-icu/icuSources/i18n/: CMakeLists.txt  alphaindex.cpp  anytrans.cpp  astro.cpp  astro.h  basictz.cpp  bocsu.cpp  brktrans.h  buddhcal.cpp  buddhcal.h  calendar.cpp  casetrn.cpp  cecal.cpp  cecal.h  chnsecal.cpp  chnsecal.h  choicfmt.cpp  coleitr.cpp  coll.cpp  collation.cpp  collation.h  collationbuilder.cpp  collationbuilder.h  collationcompare.cpp  collationdata.cpp  collationdata.h  collationdatabuilder.cpp  collationdatawriter.cpp  collationfastlatin.cpp  collationfastlatinbuilder.cpp  collationfastlatinbuilder.h  collationfcd.cpp  collationfcd.h  collationiterator.cpp  collationiterator.h  collationkeys.cpp  collationkeys.h  collationroot.cpp  collationrootelements.cpp  collationruleparser.cpp  (+239 more)
src/swift-foundation-icu/icuSources/include/_foundation_unicode/: brkiter.h  bytestream.h  bytestrie.h  calendar.h  caniter.h  char16ptr.h  chariter.h  choicfmt.h  coleitr.h  coll.h  datefmt.h  dcfmtsym.h  decimfmt.h  dtfmtsym.h  dtintrv.h  dtitvfmt.h  dtptngen.h  dtrule.h  edits.h  fieldpos.h  fmtable.h  formattednumber.h  fpositer.h  gregocal.h  idna.h  localematcher.h  localpointer.h  locid.h  measfmt.h  measunit.h  measure.h  messageformat2.h  messageformat2_arguments.h  messageformat2_data_model.h  messageformat2_data_model_names.h  messageformat2_formattable.h  messageformat2_function_registry.h  messagepattern.h  module.modulemap  msgfmt.h  (+65 more)
src/swift-foundation-icu/icuSources/io/: locbund.cpp  sprintf.cpp  sscanf.cpp  ufile.cpp  ufmt_cmn.cpp  uprintf.cpp  uprntf_p.cpp  uscanf.cpp  uscanf_p.cpp  ustdio.cpp  ustream.cpp
src/syslog/: CODEOWNERS  VENDORED.md
tests/: boot-test.sh
(+64 files in other folders)
